--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 resources:
   repositories:
-  - repository: MyGitHubRepo # The name used to reference this repository in the checkout step
+  - repository: avd # The name used to reference this repository in the checkout step
     type: github
-    endpoint: MyGitHubServiceConnection
+    endpoint: avd-terraform
 
 pool:
 #  vmImage: ubuntu-latest
@@ -10,7 +10,7 @@ pool:
   
 steps:
 - checkout: self
-- checkout: https://github.com/vbalbarin/avd.git 
+- checkout: avd
 - script: |
     cd $(Agent.BuildDirectory)/avd
     git remote add github https://github.com/vbalbarin/avd.git
