--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
 steps:
 - checkout: avd-terraform
   persistCredentials: true
-- script: |
+- bash: |
     git remote add github https://github.com/vbalbarin/avd.git
     git fetch github
     git pull github
@@ -14,7 +14,7 @@ steps:
     git commit -m "Mirror from GitHub"
     git push origin
     az repos pr create --source-branch main --target-branch customer-main
-  displayName: 'Mirror GH to Az Devops'
+  name: 'Mirror GH to Az Devops'
  
 
 env:
