--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,7 +1,9 @@
 pool:
 #  vmImage: ubuntu-latest
   name: devopspool-wb
-  
+
+trigger: none
+
 steps:
 - checkout: avd-terraform
   persistCredentials: true
@@ -15,7 +17,6 @@ steps:
     git push origin
     az repos pr create --source-branch main --target-branch customer-main
   name: 'Mirror GH to Az Devops'
- 
 
 env:
   AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
