--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,5 @@ steps:
     az repos pr create --source-branch main --target-branch customer-main
   name: "Mirror GH to Az Devops"
 
-env:
-  AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
+#env:
+#  AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
