--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ steps:
     git pull github
     git config user.email "avd-terraform@wirebyte.us"
     git config user.name "avd-terraform"
+    git checkout main
     git commit -m "Mirror from GitHub"
     git push origin
     az repos pr create --source-branch main --target-branch customer-main
