--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,5 @@ steps:
     git push origin
     az repos pr create --source-branch main --target-branch customer-main
   displayName: "Mirror GH to Az Devops"
-
-#env:
-#  AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
+  env:
+    AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
