--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,20 +6,22 @@
 
 
 pool:
-  name: devopspool-wb
+  name: $(MANAGED_DEVPOOL)
 
 steps:
 - checkout: git://avd-terraform/avd-terraform
   persistCredentials: true
 - bash: |
-    git switch -c pipeline/tmp # checkout resulted in DETACHED
+    # checkout resulted in DETACHED HEAD; next 3 lines fix this
+    git switch -c pipeline/tmp
     git checkout main
-    git merge pipeline/tmp # checkout resulted in DETACHED
-    git remote add github https://github.com/vbalbarin/avd.git
+    git merge pipeline/tmp
+    # Create new remote to fetch source main
+    git remote add github $(GHB_SOURCE_REPO)
     git fetch github
     git pull github main
-    git config user.email "avd-terraform@wirebyte.us"
-    git config user.name "avd-terraform"
+    git config user.email "$(USER_EMAIL)"
+    git config user.name "$(USER_NAME)"
     git commit -m "Mirror from GitHub"
     git push origin
     az repos pr create --source-branch main --target-branch customer-main
