--- a/templates/mirror_ghb_ado.yml
+++ b/templates/mirror_ghb_ado.yml
@@ -15,19 +15,21 @@ steps:
 - checkout: git://${{ parameters.ado_tgt_reponame }}
   persistCredentials: true
 - bash: |
+    git config user.email "${{ parameters.email }}"
+    git config user.name "${{ parameters.username }}"
     # checkout resulted in DETACHED HEAD; next 3 lines fix this
     git switch -c pipeline/tmp
     git checkout main
     git merge pipeline/tmp
+    ts=$(date +%Y%m%d_%H%M%S)
+    git checkout -b "import-$ts"
     # Create new remote to fetch source main
     git remote add github https://${{ parameters.ghb_src_reponame }}
     git fetch github
     git pull github main
-    git config user.email "${{ parameters.email }}"
-    git config user.name "${{ parameters.username }}"
-    git commit -m "Mirror from GitHub"
-    git push origin
-    az repos pr create --source-branch main --target-branch customer-main
-  displayName: "Mirror GH to Az Devops"
+    git add -A
+    git commit -m "Mirror from GitHub $ts"
+    git push origin "import-$ts"
+    az repos pr create --source-branch "import-$ts" --target-branch main
   env:
     AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
